--- a/style/index.css
+++ b/style/index.css
@@ -123,3 +123,11 @@ footer {
   margin: 20px;
   height: 35px;
 }
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
