--- a/style/index.css
+++ b/style/index.css
@@ -48,6 +48,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/*Reset code ends */
+
+html {
+  font-size: 62.5%;
+}
 
 body {
   font-family: Apple Chancery, cursive;
